After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 785238 - Throw a fit if outdir is not empty
Throw a fit if outdir is not empty
Status: RESOLVED FIXED
Product: gnome-desktop
Classification: Core
Component: Thumbnail
3.25.x
Other Linux
: Normal normal
: ---
Assigned To: Desktop Maintainers
Desktop Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-07-21 16:37 UTC by Bastien Nocera
Modified: 2017-08-22 11:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
thumbnail: Throw a warning if thumbnailer leaves dangling files (1.95 KB, patch)
2017-08-22 11:08 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2017-07-21 16:37:54 UTC
When thumbnailing in a sandbox, we should complain loudly and fail when thumbnailers through forgetfulness or malice, leave files in the output directory that aren't the thumbnail file we're expecting.

This could be temporary working files, or malicious files left there for another part of the system to choke on.
Comment 1 Bastien Nocera 2017-08-22 11:08:14 UTC
Created attachment 358133 [details] [review]
thumbnail: Throw a warning if thumbnailer leaves dangling files

When running sandboxed, we could make use "--tmpfs /tmp" to make
/tmp disappear along with the thumbnailer, but that would just paper
over the fact that those same discarded temporary files would be left in
/tmp (RAM if tmpfs) when not sandboxed.

So warn about badly behaved thumbnailers.
Comment 2 Bastien Nocera 2017-08-22 11:11:56 UTC
Attachment 358133 [details] pushed as 842b59a - thumbnail: Throw a warning if thumbnailer leaves dangling files