thumbnail: Throw a warning if thumbnailer leaves dangling files

When running sandboxed, we could make use "--tmpfs /tmp" to make
/tmp disappear along with the thumbnailer, but that would just paper
over the fact that those same discarded temporary files would be left in
/tmp (RAM if tmpfs) when not sandboxed.

So warn about badly behaved thumbnailers.

https://bugzilla.gnome.org/show_bug.cgi?id=785238